--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }} this is my ENV password $MY_SECRET_PWD"
+      run: echo "Hello ${{ github.event.inputs.name }} this is my ENV password ${{ secrets.MY_SECRET_PWD }}"
