--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,5 @@ jobs:
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}!"
     - name: Invoke API
-      run: curl -X GET -u admin:${{ secrets.MY_SECRET_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+      run: |
+        curl -X GET -u admin:${{ secrets.MY_SECRET_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
