--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,8 @@ jobs:
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name }}!"
     - name: Invoke API
+      shell: bash
+      env: 
+        SUPER_SECRET: ${{ secrets.MY_SECRET_PWD }}
       run: |
-        curl -X GET -u admin:${{ secrets.MY_SECRET_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:"$env:SUPER_SECRET" "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
