--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Invoke API
       shell: bash
       env: 
-        SUPER_SECRET: ${{ secrets.MY_SECRET_PWD }}
+        MY_SECRET: ${{ secrets.PWD }}
       run: |
-        curl -X GET -u admin:$SUPER_SECRET "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:$MY_SECRET "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
