--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,5 @@ jobs:
       run: echo "Hello ${{ github.event.inputs.name }}!"
     - name: Invoke API
       shell: bash
-      env: 
-        MY_SECRET: ${{ secrets.PWD }}
       run: |
-        curl -X GET -u admin:$MY_SECRET "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:${{ secrets.PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
