--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ name: Manual workflow
 # or API.
 on:
   workflow_dispatch:
+    secrets:
+      PWD:
+        required: true
     # Inputs the workflow accepts.
     inputs:
       name:
@@ -20,6 +23,8 @@ on:
 jobs:
   # This workflow contains a single job called "greet"
   greet:
+    env:
+      MY_PWD: ${{ secrets.PWD }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -31,4 +36,4 @@ jobs:
     - name: Invoke API
       shell: bash
       run: |
-        curl -X GET -u admin:${{ secrets.PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:$MY_PWD "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
