--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,6 @@ jobs:
       shell: bash
       env:
         NEW_VAR: "new-var"
-      run: curl -X GET -u admin:$MY_PWD $NEW_VAR "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+      run: |
+        curl -X GET -u admin:${{ env.MY_PWD }} ${{ env.NEW_VAR }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
       
