--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
       run: echo "Hello ${{ github.event.inputs.name }}!"
     - name: Invoke API
       run: |
-        curl -X GET -u admin:${MY_PWD} ${{ secrets.TEST_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:${{ secrets.TEST_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
       
