--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
   greet:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: env
     env:
       MY_PWD: ${{ secrets.PWD }}
 
@@ -32,5 +33,5 @@ jobs:
       run: echo "Hello ${{ github.event.inputs.name }}!"
     - name: Invoke API
       run: |
-        curl -X GET -u admin:${{ secrets.TEST_PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
+        curl -X GET -u admin:${{ secrets.PWD }} "https://phx15.demo.axway.com:8090/api/topology?serviceType=gateway" -H "accept: application/json"
       
