--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@
 
 name: Deploy to APIM
 
+description: Deploy APIs to Axway APIM and promote them to the Amplify Platform 
+
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
@@ -22,18 +24,18 @@ jobs:
   install-cli:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    
     # Use "environment" if you define one or more in your repo
 
-    # environment: dev
+    environment: dev
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - uses: actions/checkout@v1
     # Runs a single command using the runners shell
     - name: Download and untar the tool
       run: |
         wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/${{ github.event.inputs.release }}/axway-apimcli-${{ github.event.inputs.release }}.tar.gz | tar xfz  -
     - name: view files in the dir
       run: |
-        ls -l apim-cli-${{ github.event.inputs.release }}
-      
+        apim-cli-${{ github.event.inputs.release }}/scripts/apim.sh api import -a config/petstore.json -c config/petstore-config.json -apimanagerUrl https://phx-24.demo.axway.com:8075/ -u apiadmin -p ${{ secrets.APIADMIN_PWD }}
