--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-        "https://json.schemastore.org/github-action.json": "file:///c%3A/Users/anartovich/git_repo/GitHub/env-secret/.github/workflows/main.yml"
+        "https://json.schemastore.org/github-workflow.json": "file:///c%3A/Users/anartovich/git_repo/GitHub/env-secret/.github/workflows/main.yml"
     }
 }
