small error in api-config

--- a/config/API-config.json
+++ b/config/API-config.json
@@ -1,5 +1,5 @@
 {
-    "path": "/demo/api/v1",
+    "path": "/demoapi/v1",
     "state": "published",
     "retirementDate": "01.09.2050",
     "version": "1.0.0",
