--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,5 @@ jobs:
         cat $FILE_NAME
         export USER=$(jq -r '.apiadmin' config/script-config.json)
         export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
+        sed -i '0,/info/s//debug/' apim-cli-${{ github.event.inputs.release }}/lib/log4j2.xml
         apim-cli-${{ github.event.inputs.release }}/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
