--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/${{ github.event.inputs.release }}/axway-apimcli-${{ github.event.inputs.release }}.tar.gz | tar xfz  -
     - name: Import API into API Manager
       run: |
-        export FILE_NAME="Account-Information.json"
+        export FILE_NAME="./APIs/Account-Information.json"
         export API_NAME=$(jq -r .info.title $FILE_NAME)
         echo $(jq '.name = $ENV.API_NAME' config/API-config.json) > config/API-config.json
         export PORT=4010
