enable looping over many files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,19 @@ jobs:
         wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/${{ github.event.inputs.release }}/axway-apimcli-${{ github.event.inputs.release }}.tar.gz | tar xfz  -
     - name: Import API into API Manager
       run: |
-        export FILE_NAME="./APIs/Account-Information.json"
-        export API_NAME=$(jq -r .info.title $FILE_NAME)
-        echo $(jq '.name = $ENV.API_NAME' config/API-config.json) > config/API-config.json
-        export PORT=4010
-        export HOST="http://localhost:$PORT"
-        echo $(jq '.servers[0].url |= $ENV.HOST' $FILE_NAME) > $FILE_NAME
-        export USER=$(jq -r '.apiadmin' config/script-config.json)
-        export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
+        FILES=$(ls ./APIs/*.json)
+        PORT=4010
+
+        for FILE_NAME in $FILES
+        do
+          # export FILE_NAME="./APIs/Account-Information.json"
+          export API_NAME=$(jq -r .info.title $FILE_NAME)
+          echo $(jq '.name = $ENV.API_NAME' config/API-config.json) > config/API-config.json
+          export HOST="http://localhost:$PORT"
+          echo $(jq '.servers[0].url |= $ENV.HOST' $FILE_NAME) > $FILE_NAME
+          export USER=$(jq -r '.apiadmin' config/script-config.json)
+          export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
         
-        apim-cli-${{ github.event.inputs.release }}/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
+          apim-cli-${{ github.event.inputs.release }}/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
+          (( PORT = PORT + 1 ))
+        done
