--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     # Runs a single command using the runners shell
     - name: Download and untar the tool
       run: |
-        wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/$CLI-RELEASE/axway-apimcli-$CLI-RELEASE.tar.gz | tar xfz  -
+        wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/${CLI-RELEASE}/axway-apimcli-${CLI-RELEASE}.tar.gz | tar xfz  -
     - name: Import API into API Manager
       run: |
         FILES=$(ls ./APIs/*.json)
