--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 # Environment variables that may be used in all jobs
 
 env:
-  CLI-RELEASE: '1.12.1'
+  CLI_RELEASE: 1.12.1
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,7 +29,7 @@ jobs:
     # Runs a single command using the runners shell
     - name: Download and untar the tool
       run: |
-        wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/${CLI-RELEASE}/axway-apimcli-${CLI-RELEASE}.tar.gz | tar xfz  -
+        wget -qO- https://github.com/Axway-API-Management-Plus/apim-cli/releases/download/'$CLI_RELEASE'/axway-apimcli-'$CLI_RELEASE'.tar.gz | tar xfz  -
     - name: Import API into API Manager
       run: |
         FILES=$(ls ./APIs/*.json)
@@ -46,6 +46,6 @@ jobs:
           export USER=$(jq -r '.apiadmin' config/script-config.json)
           export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
         
-          apim-cli-$CLI-RELEASE/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
+          apim-cli-'$CLI_RELEASE'/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
           (( PORT = PORT + 1 ))
         done
