added backendBasepath to config

--- a/config/API-config.json
+++ b/config/API-config.json
@@ -4,5 +4,6 @@
     "state": "published",
     "retirementDate": "01.09.2050",
     "version": "1.0.0",
-    "organization": "API Development"
+    "organization": "API Development",
+    "backendBasepath": "http://localhost:4010"
 }
