--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           export PATH_NAME="/demoapi/v1/${API_NAME//[!a-z,!A-Z]}"
           echo $(jq '.path = $ENV.PATH_NAME' config/API-config.json) > config/API-config.json
           export HOST="http://localhost:$PORT"
-          echo $(jq '.servers[0].url |= $ENV.HOST' $FILE_NAME) > $FILE_NAME
+          echo $(jq '.backendBasepath = $ENV.HOST' config/API-config.json) > config/API-config.json
           export USER=$(jq -r '.apiadmin' config/script-config.json)
           export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
         
