--- a/config/API-config.json
+++ b/config/API-config.json
@@ -5,5 +5,5 @@
     "retirementDate": "01.09.2050",
     "version": "1.0.0",
     "organization": "API Development",
-    "backendBasepath": "http://localhost:4010"
+    "backendBasepath": "http://localhost:4010/"
 }
