use secret for APIM URL

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ on:
 
 env:
   CLI_RELEASE: 1.14.2
-  APIMANAGER: "${{ github.event.inputs.managerURL }}"
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -62,6 +61,6 @@ jobs:
           # export APIMANAGER=$(jq -r '.apimanager' config/script-config.json)
           #APIMANAGER="${{ github.event.inputs.managerURL }}"
         
-          apim-cli-${{ env.CLI_RELEASE }}/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl $APIMANAGER -u $USER -p ${{ secrets.APIADMIN_PWD }}
+          apim-cli-${{ env.CLI_RELEASE }}/scripts/apim.sh api import -a $FILE_NAME -c config/API-config.json -apimanagerUrl ${{ secrets.APIMANAGER }} -u $USER -p ${{ secrets.APIADMIN_PWD }}
           (( PORT = PORT + 1 ))
         done
