--- a/config/API-config.json
+++ b/config/API-config.json
@@ -2,23 +2,34 @@
    "name": "Test API",
    "path": "/demoapi/v1",
    "state": "published",
-   "retirementDate": "01.09.2050",
    "version": "1.0.0",
    "organization": "API Development",
-   "backendBasepath": "http://localhost:4010",
+   "backendBasepath": "https://maverick.demo.axway.com:8065",
    "securityProfiles": [
       {
          "name": "_default",
          "isDefault": true,
          "devices": [
             {
-               "name": "API Key",
-               "type": "apiKey",
+               "type": "oauth",
+               "name": "OAuth",
                "order": 1,
                "properties": {
-                  "apiKeyFieldName": "KeyId",
-                  "takeFrom": "HEADER",
-                  "removeCredentialsOnSuccess": true
+                  "scopesMustMatch": "Any",
+                  "removeCredentialsOnSuccess": true,
+                  "authorizationHeaderPrefix": "Bearer",
+                  "authCodeGrantTypeRequestSecretName": "client_secret",
+                  "authCodeGrantTypeEnabled": true,
+                  "authCodeGrantTypeTokenEndpointTokenName": "access_code",
+                  "tokenStore": "OAuth Access Token Store",
+                  "authCodeGrantTypeRequestClientIdName": "client_id",
+                  "implicitGrantLoginTokenName": "access_token",
+                  "authCodeGrantTypeRequestEndpointUrl": "https://maverick.demo.axway.com:8181/api/oauth/authorize",
+                  "authCodeGrantTypeTokenEndpointUrl": "https://maverick.demo.axway.com:8181/api/oauth/token",
+                  "implicitGrantLoginEndpointUrl": "https://maverick.demo.axway.com:8181/api/oauth/authorize",
+                  "accessTokenLocation": "HEADER",
+                  "scopes": "resource.WRITE, resource.READ",
+                  "implicitGrantEnabled": true
                }
             }
          ]
