--- a/config/API-config.json
+++ b/config/API-config.json
@@ -1,5 +1,5 @@
 {
-   "name": "Test API",
+   "name": "Demo API",
    "path": "/demoapi/v1",
    "state": "published",
    "retirementDate": "01.09.2050",
